--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <br>
       <button id="send" class="btn btn-success">Send</button>
     </div>
-    <div id="nessages"></div>
+    <div id="messages"></div>
   </div>
 
   <script>
@@ -41,7 +41,7 @@
     socket.on('message', addMessages);
 
     function addMessages(message) {
-      $("#messages").append('<h4> $ {message.name} </h4> <p> ${message.message} </p>')
+      $("#messages").append(`<h4> ${message.name} </h4> <p> ${message.message} </p>`)
     }
 
     function getMessages(){
